force-app/main/default/objects/Product2/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate?</label>
    <type>Checkbox</type>
</CustomField>