force-app/main/default/objects/Product2/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <label>Highlights</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common Tool</fullName>
            </value>
            <value>
                <fullName>New Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>