force-app/main/default/objects/Product2/fields/Old_Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Tool_Name__c</fullName>
    <label>Old Tool Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>