force-app/main/default/objects/Product2/fields/Sort_Category__c.field-meta.xml
<CustomField>
    <fullName>Sort_Category__c</fullName>
    <label>Sort Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>