force-app/main/default/objects/Product2/fields/Spanish_Name__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Name__c</fullName>
    <label>Spanish Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>