force-app/main/default/objects/Product2/fields/Tool_Note__c.field-meta.xml
<CustomField>
    <fullName>Tool_Note__c</fullName>
    <label>Tool Note</label>
    <type>TextArea</type>
</CustomField>