force-app/main/default/objects/Product2/listViews/Agriculture_Sub_Type.listView-meta.xml
<ListView>
    <fullName>Agriculture_Sub_Type</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Category__c</field>
        <operation>equals</operation>
        <value>Agriculture</value>
    </filters>
    <label>Agriculture Sub Type</label>
    <sharedTo>
        <group>Atlanta_Community_ToolBank</group>
    </sharedTo>
</ListView>