force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Old_Tool_Name__c</columns>
    <columns>Sort_Category__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sub_Category__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Product_Image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Tools</label>
</ListView>